syntax = "proto3";
option go_package = "github.com/treeverse/lakefs/graveler/committed";
option java_package = "io.treeverse.lakefs.graveler";

package committed;

message RangeData {
	// First key of range, must be >= key of range in SSTable.  If missing, == key of range in SSTable.
	bytes min_key = 1;
	bytes max_key = 2;
	uint64 estimated_size = 3;
	int64 count = 4;
}
